--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src= "images/transit.jpg" title= 
+      <img src= "images/transit.jpg" title= transit alt=  
     </div>
   </div>
 </body>
